Bug 204765 - Parameterized properties expression don't return the assigned value. r=adamlock, sr=alecf